<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_categories"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        fontPath="font/cloud_bold.otf"
        android:text="@string/categorieText"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_rounded_corners11"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="50dp"
            android:background="#be2026"
            android:orientation="vertical">

            <TextView
                fontPath="font/cloud_bold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="36sp"
                android:text="@string/stringsong"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                fontPath="font/cloud_bold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textSize="25sp"
                android:textColor="#000"/>
            <TextView
                android:layout_marginTop="5dp"
                fontPath="font/cloud_bold.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_head"
                android:textSize="18sp"
                android:textColor="#000"/>



    </LinearLayout>


</LinearLayout>

</LinearLayout>