<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="50"
    tools:ignore="MissingPrefix"
    android:background="@drawable/toolbar">

    <ImageView
        android:layout_marginTop="@dimen/twenty"
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logoforandroid"
        android:layout_gravity="center"
  />


    <LinearLayout
        android:layout_marginTop="@dimen/twenty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fifteen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="font/cloud_bold.otf"
                android:textColor="@color/white"
                android:id="@+id/usernameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/textsize18" />

            <EditText
                android:layout_marginTop="@dimen/five"
                android:labelFor="@+id/editUsername"
                android:alpha="0.50"
                android:padding="@dimen/ten"
                android:textColorHint="@color/white"
                android:background="@drawable/button_bg_rounded_corners9"
                android:id="@+id/editUsername"
                android:inputType="text"
                android:hint="@string/hintUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                fontPath="font/cloud_bold.otf"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/five"
                android:id="@+id/passText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/textsize18" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/five"
                android:alpha="0.50"
                android:inputType="textPassword"
                android:background="@drawable/button_bg_rounded_corners9"
                android:hint="@string/inputPass"
                android:labelFor="@+id/editPass"
                android:padding="@dimen/ten"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_fb"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:contentDescription="@string/phoneimage"
                android:layout_marginStart="@dimen/ten"
                android:layout_width="@dimen/fifty"
                android:layout_height="wrap_content"
                android:id="@+id/phone_btn"
                android:src="@drawable/smartphone"
                />

        </LinearLayout>





        <Button
            fontPath="font/cloud_bold.otf"
            android:id="@+id/login_btn"
            android:layout_marginTop="@dimen/fifty"
            android:alpha="1"
            android:textStyle="bold"
            android:textSize="@dimen/textsize18"
            android:textColor="@color/white"
            android:background="@drawable/button_bg_rounded_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            />




    </LinearLayout>


</LinearLayout>